{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "gameplay",
            "id": "1ecb9811-998e-4302-bd62-162a8f3ff78b",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "cca545c1-e4c3-4403-9b64-0e7f25831325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectPrevInteractable",
                    "type": "Button",
                    "id": "eadb4aaa-10c2-4038-aa21-903995ff4bc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectNextInteractable",
                    "type": "Button",
                    "id": "e802e1a8-561a-4193-888c-8c2877dcc8ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a4688fe9-74bd-476d-a37b-7ac7d1f893da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NextInventoryItem",
                    "type": "Button",
                    "id": "53d79de9-0faf-4a80-b51f-db197d193acb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevInventoryItem",
                    "type": "Button",
                    "id": "387b226d-c290-4dd6-a5f5-9be1e4bfb188",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "7533990f-ce82-4b15-914c-deb807f42d76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "HideDisplayeTaskList",
                    "type": "Button",
                    "id": "c2ab04b2-960f-4593-be0b-ab583022b798",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkipMessage",
                    "type": "Button",
                    "id": "b27e36b9-9a4c-4803-ae3a-0e436084254c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "be6f4ae9-2882-411c-8dcb-ab42ca18332e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextTool",
                    "type": "Button",
                    "id": "27b7c8aa-49e2-4f41-9d39-7a51416f21ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevTool",
                    "type": "Button",
                    "id": "626905bd-33a6-4e4d-90c1-b82b2ca15a89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTool",
                    "type": "Button",
                    "id": "1cae53d2-c9cb-47ad-a7a0-83a5140f1581",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseTool",
                    "type": "Value",
                    "id": "81067780-719a-40e0-9068-61c8bd9a676d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EndUsingTool",
                    "type": "Button",
                    "id": "f30c9b4b-6eff-4744-a629-c34ca7d9c636",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e480e68f-fb43-44ee-8fe7-b35b806d8537",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecb25dcf-593d-4555-a35c-ed4502812224",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPrevInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ea9d823-12aa-4662-a5d0-302a15e2e6ab",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNextInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f782ccea-c25c-4b23-87bf-d044087371b0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "112fcae9-b3e5-4f49-9f63-6e32ff38b559",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "32c7d959-5d4b-4860-bb14-4cd62404f1fc",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "69f1808a-d401-49f9-9d7e-7ce4dbb7df31",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "59e296e3-5042-4659-b01e-1d7581620e60",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "29d2aa5d-4c80-4e54-afec-91234fb9b165",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextInventoryItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27a7f5a2-3878-42a6-a5cb-48e94204a847",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevInventoryItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c749c13-f964-43fc-b1ad-bb2c98a38077",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ade9d7e-c3d6-4c90-87e2-e9152772ea0c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HideDisplayeTaskList",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efe41d20-2320-4b42-998d-2dd310976fc7",
                    "path": "<Keyboard>/f",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "SkipMessage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77210afe-e58d-4255-9989-2edef9226316",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "759308f1-9733-4345-9ce2-36043118d394",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df03ee93-1193-4349-bfe7-3029d4dd6ceb",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f5d3c75-da12-4a1a-8f23-b8fd6cc1d201",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "268bf8bb-2ec8-40a5-a0ce-8cab2e756400",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26e1f627-2f3a-4620-9fd8-3c9703f1ebb2",
                    "path": "<Keyboard>/j",
                    "interactions": "Press(pressPoint=0.01,behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "EndUsingTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}